fix: 태그 삭제시 오류 수정